# os2mo-fkk

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  init.config.yml  pyproject.toml  queries.graphql  schema.graphql
.reuse/: dep5
dev-environment/: cert.pem
os2mo_fkk/: api.py  app.py  config.py  depends.py  events.py  models.py  temp.py  util.py
os2mo_fkk/autogenerated_graphql_client/: __init__.py  async_base_client.py  base_model.py  client.py  create_class.py  delete_class.py  enums.py  exceptions.py  get_class.py  get_facet.py  get_version.py  input_types.py  scalars.py  truncate_class.py  update_class.py
os2mo_fkk/klassifikation/: api.py  event_generator.py  models.py
tests/: test_models.py
tests/integration/: conftest.py  test_api.py  test_config.py  test_metrics.py  test_nothing.py  test_something.py  test_sync.py
