# SPDX-FileCopyrightText: Magenta ApS <https://magenta.dk>
# SPDX-License-Identifier: MPL-2.0
[tool.poetry]
name = "os2mo_fkk"
version = "0.0.0" # versioning handled by conventional commits
description = "OS2mo integration for Fælleskommunalt Klassifikationssystem (FKK)"
authors = ["Magenta ApS <info@magenta.dk>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1"
structlog = "^24"
uvicorn = "^0.29"
httpx = "^0.27"
fastramqpi = "^10"
fastapi = "^0.112"
signxml = "^3"
lxml = "^5"
cryptography = "^42"
pyopenssl = "^24"
sqlalchemy = "^2"
more-itertools = "^9"

[tool.poetry.group.pre-commit.dependencies]
mypy = "^1"
pre-commit = "^3"
ruff = "^0.4"
deptry = "^0.16"
types-pyopenssl = "^24"
lxml-stubs = "^0.5"

[tool.poetry.group.test.dependencies]
pytest = "^7"
pytest-asyncio = "^0.23"
pytest-cov = "^5"
pytest-split = "^0.9"
asgi-lifespan = "^2.1"

[tool.poetry.group.dev.dependencies]
ariadne-codegen = {extras = ["subscriptions"], version = "^0.7"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"

[tool.mypy]
plugins = "pydantic.mypy, pydantic.v1.mypy"

[tool.ariadne-codegen]
# Ideally, the GraphQL client is generated as part of the build process and
# never committed to git. Unfortunately, most of our tools and CI analyses the
# project directly as it is in Git. In the future - when the CI templates
# operate on the built container image - only the definition of the schema and
# queries should be checked in.
#
# The default package name is `graphql_client`. Make it more obvious that the
# files are not to be modified manually.
target_package_name = "autogenerated_graphql_client"
target_package_path = "os2mo_fkk/"
client_name = "GraphQLClient"
schema_path = "schema.graphql"  # curl -O http://localhost:5000/graphql/v22/schema.graphql
queries_path = "queries.graphql"
include_all_inputs = false
include_all_enums = false
plugins = [
    # Return values directly when only a single top field is requested
    "ariadne_codegen.contrib.shorter_results.ShorterResultsPlugin",
]
[tool.ariadne-codegen.scalars.DateTime]
type = "datetime.datetime"
parse = "fastramqpi.ariadne.parse_graphql_datetime"
[tool.ariadne-codegen.scalars.UUID]
type = "uuid.UUID"


[tool.coverage.report]
omit = [
  "os2mo_fkk/autogenerated_graphql_client/*",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.deptry]
extend_exclude = [
  "os2mo_fkk/autogenerated_graphql_client/*"
]

[tool.deptry.per_rule_ignores]
DEP002 = [
  # uvicorn is used by the Dockerfile
  "uvicorn",
]
